exec/scripts/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pitter-patter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shell_script_will_replace_this_username/ssafy-common-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pitter-patter
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
